manifests/nexus/docker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-docker-svc
  namespace: nexus
spec:
  ports:
  - name: docker
    port: 5000
    targetPort: 5000
  selector:
    app: nexus
