manifests/nexus/nexus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - name: nexus
        image: sonatype/nexus3:latest
        ports:
        - containerPort: 8081
        - containerPort: 5000
        volumeMounts:
        - name: nexus-data
          mountPath: /nexus-data
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-data-pvc
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8081
  selector:
    app: nexus

---
apiVersion: v1
kind: Service
metadata:
  name: nexus-docker-svc
  namespace: nexus
spec:
  type: ClusterIP
  ports:
  - name: docker
    port: 5000
    targetPort: 5000
  selector:
    app: nexus
